<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_my_profile"
            android:title="@string/drawer_my_profile"/>

        <item
            android:id="@+id/drawer_active_chats"
            android:title="@string/drawer_active_chats"/>

        <item
            android:id="@+id/drawer_contacts"
            android:title="@string/drawer_contacts"/>
    </group>

    <item
        android:title="@string/drawer_others">

        <menu>
            <item
                android:id="@+id/drawer_about"
                android:title="@string/drawer_about"/>
            <item
                android:id="@+id/drawer_debug_geoloc"
                android:title="@string/drawer_debug"/>
            <item
                android:id="@+id/drawer_debug_map"
                android:title="@string/drawer_debug_map"/>
        </menu>
    </item>

</menu>